# library_kafka_project

./: README.md  app.py  books.csv  books.db  borrowtopic.db  create_db.sql  logintopic.db  publishers.db  pyproject.toml  readers.db  recommends.db  reports.db  reports.db-journal  requirements.txt  searchtopic.db  setup_db.py  staffs.db  supervise.py
static/: header.js
static/styles/: header.css  search.css
templates/: book.html  book_available.html  book_manage.html  book_search.html  booklist.html  borrow_result.html  del_account.html  del_reader.html  del_staff.html  home.html  login.html  new_reader.html  new_staff.html  publishers.html  r_booklist.html  r_borrow.html  r_member.html  r_modify.html  r_profile.html  r_publishers.html  r_result.html  reader_list.html  recommend.html  recommend_list.html  report_manage.html  result.html  s_member.html  s_modify.html  s_profile.html  s_result.html  supervise.html  user_record_search.html
