[tool.poetry]
name = "library-kafka-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "library_kafka_project"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.2"
kafka-python = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
